# FinalProjectAlgo-Kel1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main  main.c  merch.c  progress 10 mei kelompok 1.txt
data/: Daftar_Barang.txt  daftar_merch.txt  daftar_tiket.txt  daftar_vod.txt  user_data.txt
data-bak/: daftar_merch.txt  daftar_tiket.txt  user_data.txt
data/barang/: daftar_merch.txt  daftar_tiket.txt  daftar_vod.txt
includes/: DB.h  DataTypes.h  VOD.h  fileProc.h  merch.h  pembayaran.h  tiket.h  userData.h  util.h
src/: VOD.c  dbController.c  fileProc.c  main.c  merch.c  pembayaran.c  system.c  tiket.c  userData.c  util.c  vod.c
